--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ body {
 }
 
 main {
-    overflow: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
